# nano-work-server

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: gpu.rs  gpu_metal.rs  main.rs  work.cl  work.metal
