[package]
name = "nano-work-server"
version = "0.1.7"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/nanocurrency/nano-work-server"
description = "A dedicated work server for the Nano cryptocurrency"

[dependencies]
futures = "0.1.17"
hyper = "0.11.25"
clap = "2.31.2"
ocl = "0.18.0"
serde_json = "1.0.17"
hex = "0.3.2"
rand = "0.4.2"
blake2 = "0.7.1"
digest = "0.7.2"
byteorder = "1.2.2"
parking_lot = "0.5.5"
