[package]
name = "nano-work-server"
version = "0.3.1"
authors = ["Lee Bousfield <ljbousfield@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/nanocurrency/nano-work-server"
description = "A dedicated work server for the Nano cryptocurrency"
edition = "2021"

[dependencies]
futures = "0.3.25"
hyper = { version = "0.14.20", features = ["server", "http1", "http2", "tcp"] }
clap = "2.34.0"
ocl = "0.19.4"
serde_json = "1.0.87"
hex = "0.4.3"
rand = "0.8.5"
blake2 = "0.10.4"
digest = "0.10.5"
byteorder = "1.4.3"
parking_lot = "0.12.1"
chrono = "0.4.22"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
rand_xorshift = "0.3.0"
